@@ -218,6 +218,8 @@ name|DistributedFileSystem
 operator|)
 name|fs
 decl_stmt|;
+try|try
+block|{
 name|SnapshottableDirectoryStatus
 index|[]
 name|stats
@@ -238,6 +240,42 @@ operator|.
 name|out
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|String
+index|[]
+name|content
+init|=
+name|e
+operator|.
+name|getLocalizedMessage
+argument_list|()
+operator|.
+name|split
+argument_list|(
+literal|"\n"
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"lsSnapshottableDir: "
+operator|+
+name|content
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
