@@ -387,6 +387,8 @@ literal|2
 index|]
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|SnapshotDiffReport
 name|diffReport
 init|=
@@ -413,6 +415,42 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|String
+index|[]
+name|content
+init|=
+name|e
+operator|.
+name|getLocalizedMessage
+argument_list|()
+operator|.
+name|split
+argument_list|(
+literal|"\n"
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"snapshotDiff: "
+operator|+
+name|content
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
