@@ -903,7 +903,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SnapshotException
+name|RemoteException
 name|e
 parameter_list|)
 block|{
@@ -965,13 +965,19 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SnapshotException
+name|RemoteException
 name|se
 parameter_list|)
 block|{
 name|assertNestedSnapshotException
 argument_list|(
+operator|(
+name|SnapshotException
+operator|)
 name|se
+operator|.
+name|unwrapRemoteException
+argument_list|()
 argument_list|,
 literal|"subdirectory"
 argument_list|)
@@ -994,13 +1000,19 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SnapshotException
+name|RemoteException
 name|se
 parameter_list|)
 block|{
 name|assertNestedSnapshotException
 argument_list|(
+operator|(
+name|SnapshotException
+operator|)
 name|se
+operator|.
+name|unwrapRemoteException
+argument_list|()
 argument_list|,
 literal|"subdirectory"
 argument_list|)
@@ -1054,13 +1066,19 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SnapshotException
+name|RemoteException
 name|se
 parameter_list|)
 block|{
 name|assertNestedSnapshotException
 argument_list|(
+operator|(
+name|SnapshotException
+operator|)
 name|se
+operator|.
+name|unwrapRemoteException
+argument_list|()
 argument_list|,
 literal|"ancestor"
 argument_list|)
@@ -1083,13 +1101,19 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|SnapshotException
+name|RemoteException
 name|se
 parameter_list|)
 block|{
 name|assertNestedSnapshotException
 argument_list|(
+operator|(
+name|SnapshotException
+operator|)
 name|se
+operator|.
+name|unwrapRemoteException
+argument_list|()
 argument_list|,
 literal|"ancestor"
 argument_list|)
